--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -12,6 +12,7 @@ body {
 .fixed-bar {
     background-color: #151515 url(../images/bkg.png) 0 0;
     width: 300px;
+    min-width: 300px;
     height: 100%;
 
     display: flex;
@@ -80,6 +81,7 @@ i {
 
 .container {
     width: 100%;
+    max-width: none;
     height: 100%;
 
     margin: 0;
