Setting up posts config

--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -92,7 +92,6 @@ i {
 
 .container section {
     width: 100%;
-    height: 200vh;
 }
 
 
@@ -108,4 +107,8 @@ i {
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: #4d5963;
+}
+
+a {
+    color: #b5e853;
 }
