--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -5,9 +5,13 @@ ul {
     margin: 20px;
 }
 
+.container section {
+    margin: 50px;
+}
+
 .post {
     // background-color: wheat;
     // height: 50px;
-    margin: 50px;
+    margin-top: 40px;
     position: relative;
 }
