--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="cphsPqPwkYhfSICiunq-WX5Gs9t3nrTEuQBWkPoq5Co" />
     <link rel="stylesheet" href="{{ '/assets/css/default.css?v=' | append: site.github.build_revision | relative_url }}">
     <script src="https://kit.fontawesome.com/55f0994afc.js" crossorigin="anonymous"></script>
 
