--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
             <div class="link"><i class="fab fa-twitter-square"> &nbsp;<a href="">Twitter</a></i></div>
             <div class="link"><i class="fab fa-youtube"> <a href="">Youtube</a></i></div>
             <div class="link"><i class="far fa-envelope"> <a href="">Email</a></i></div>
-            <div class="link"><i class="fas fa-map-marker-alt"> &nbsp;<p>Brazil</p></i></div>
+            <div class="link"><i class="fas fa-map-marker-alt"> &nbsp;<a>Brazil</a></i></div>
         </div>
     </div>
 
