Search by tags and categories

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,5 +12,9 @@ layout: default
 {{content}}
 
 {% if page.tags %}
-  <small>Tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
+  <small>Tags: {% for tag in page.tags %} <a class="tag" href="/tag/{{tag}}">{{ tag }}</a> {% endfor %}</small>
+{% endif %}
+<br>
+{% if page.categories %}
+  <small>Categories: {% for category in page.categories %} <a class="tag" href="/category/{{category}}">{{ category }}</a> {% endfor %}</small>
 {% endif %}
