--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -40,30 +40,7 @@
 
     <div class="container">
       <section id="main_content">
-        <h1>Posts with "{{ page.title }}" tag</h1>
-          
-        <ul>
-        {% for post in page.posts %}
-        {% if post.tags contains page.title %}
-
-        <li class="post">
-            <a href="{{ post.url }}">{{ post.title }}</a>
-            <br>
-            {% if post.description %}
-            {{ post.description }}
-            {% else %}
-            {{ post.excerpt }}
-            {% endif %}
-
-            <p>Author: {{post.author}}</p>
-            <p>Categories: {{post.categories | join: " - "}}</p>
-            <p>Tags: {{post.tags | join: " - "}}</p>
-            <p>Date: {{post.date | date: "%-d %B %Y"}}</p>
-        </li>
-
-        {% endif %}
-        {% endfor %}
-        </ul>
+        {{content}}
       </section>
     </div>
 
