--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,6 @@ layout: default
   <small>Tags: {% for tag in page.tags %} <a class="tag" href="/tag/{{tag}}">{{ tag }}</a> {% endfor %}</small>
 {% endif %}
 <br>
-<!-- {% if page.categories %}
+{% if page.categories %}
   <small>Categories: {% for category in page.categories %} <a class="tag" href="/category/{{category}}">{{ category }}</a> {% endfor %}</small>
-{% endif %} -->
+{% endif %}
