Search by categories and tags

--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -123,4 +123,9 @@ a {
     border: 1px solid white;
     padding: 3px;
     border-radius: 4px;
+    text-decoration: none;
+}
+
+.tag:hover {
+    text-decoration: underline;
 }
