--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,10 @@
         <a class="name" href="/">{{ site.name }}</a>
         <p class="desc">{{ site.perfil_desc }}</p>
         <div class="links">
-            <div class="link"><i class="fab fa-github"> &nbsp;<a href="">Github</a></i></div>
+            <div class="link"><i class="fab fa-github"> &nbsp;<a href="https://github.com/ReddyyZ">Github</a></i></div>
             <div class="link"><i class="fab fa-twitter-square"> &nbsp;<a href="">Twitter</a></i></div>
-            <div class="link"><i class="fab fa-youtube"> <a href="">Youtube</a></i></div>
-            <div class="link"><i class="far fa-envelope"> <a href="">Email</a></i></div>
+            <div class="link"><i class="fab fa-youtube"> <a href="https://youtube.com/fantasmanosistema">Youtube</a></i></div>
+            <div class="link"><i class="far fa-envelope"> <a href="mailto:arthurc.oli.whitehat@gmail.com">Email</a></i></div>
             <div class="link"><i class="fas fa-map-marker-alt"> &nbsp;<a>Brazil</a></i></div>
         </div>
     </div>
