--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -57,8 +57,8 @@
             {% endif %}
 
             <p>Author: {{post.author}}</p>
-            <p>Categories: {{post.categories | join: " - "}}</p>
-            <p>Tags: {{post.tags | join: " - "}}</p>
+            <p>Categories: {% for category in post.categories %} <a class="tag" href="/category/{{category}}">{{ category }}</a> {% endfor %}</p>
+            <p>Tags: {% for tag in post.tags %} <a class="tag" href="/tag/{{tag}}">{{ tag }}</a> {% endfor %}</p>
             <p>Date: {{post.date | date: "%-d %B %Y"}}</p>
         </li>
 
