Copy command button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,7 @@
     <meta property="article:section" content="{{page.section}}">
     {% endif %}
     <script src="{{ '/assets/js/calculate-reading-time.js' }}"></script>
+    <script src="{{ '/assets/js/copy-text.js' }}"></script>
 {% seo %}
   </head>
 
