Medium link added

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,6 +52,7 @@
             <div class="link"><i class="fab fa-twitter-square"> &nbsp;<a href="">Twitter</a></i></div>
             <div class="link"><i class="fab fa-youtube"> <a href="https://youtube.com/fantasmanosistema" target="_blank" rel="noopener noreferrer">Youtube</a></i></div>
             <div class="link"><i class="far fa-envelope"> <a href="mailto:arthurc.oli.whitehat@gmail.com" target="_blank" rel="noopener noreferrer">Email</a></i></div>
+            <div class="link"><i class="fab fa-medium"> &nbsp;<a href="https://medium.com/@reddyyz" target="_blank" rel="noopener noreferrer">Medium</a></i></div>
             <div class="link"><i class="fas fa-map-marker-alt"> &nbsp;<a>Brazil</a></i></div>
         </div>
     </div>
