Updating responsive css

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -2,11 +2,13 @@
 ---
 
 ul {
-    margin: 20px;
+    // margin: 20px;
+    margin: 1.4vw;
 }
 
 .container section {
-    margin: 50px;
+    // margin: 50px;
+    margin: 2vw;
 }
 
 .post {
