--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -12,7 +12,7 @@ body {
 .fixed-bar {
     background-color: #151515 url(../images/bkg.png) 0 0;
     width: 25%;
-    // min-width: 300px;
+    min-width: 180px;
     height: 100%;
 
     display: flex;
@@ -36,7 +36,7 @@ body {
 }
 
 .fixed-bar .name {
-    font-size: 2.2vw;
+    font-size: 4vh;
     margin: 15px;
     text-decoration: none;
 }
@@ -47,7 +47,7 @@ body {
 }
 
 .fixed-bar .desc {
-    margin: 1vw;
+    margin: 2vh;
 }
 
 .fixed-bar .links {
@@ -80,7 +80,8 @@ body {
 }
 
 i {
-    font-size: 20px;
+    // font-size: 20px;
+    font-size: 2.5vh;
 
     margin: 2.5%;
 }
