--- a/assets/css/post.scss
+++ b/assets/css/post.scss
@@ -20,3 +20,9 @@
     cursor: pointer;
     color: #bdf358;
 }
+
+@media (max-width: 600px){
+    .container {
+        margin-top: 110px;
+    }
+}
