--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,18 @@
 
   <body>
     <!-- Google Tag Manager (noscript) -->
+    <header>
+      <a href="" class="name">ReddyyZ</a>
+      <div class="lnks">
+        <a href=""><i class="fab fa-github"></i></a>
+        <a href=""><i class="fab fa-twitter-square"></i></a>
+        <a href=""><i class="fab fa-youtube"></i></a>
+        <a href=""><i class="fab fa-medium"></i></a>
+        <a href=""><i class="fas fa-briefcase"></i></a>
+        <a href=""><i class="far fa-envelope"></i></a>
+      </div>
+    </header>
+
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQJN96Q"
       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- End Google Tag Manager (noscript) -->
