--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -143,3 +143,51 @@ a {
 .pre-none {
     margin: 0;
 }
+
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 !important;
+    padding: 10px 0 !important;
+    visibility: hidden;
+    position: absolute;
+    background: #151515 url("../images/bkg.png") 0 0;
+    z-index: 1;
+}
+
+header a {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+header i {
+    color: #eaeaea;
+}
+
+header .name {
+    font-size: 22px;
+}
+
+header .lnks {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    margin: 0;
+}
+
+@media (max-width: 600px){
+    .fixed-bar{
+        visibility: hidden;
+        position: absolute;
+    }
+
+    body {
+        flex-direction: column;
+    }
+
+    header {
+        visibility: visible;
+    }
+}
