--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,12 +23,12 @@
     <header>
       <a href="" class="name">ReddyyZ</a>
       <div class="lnks">
-        <a href=""><i class="fab fa-github"></i></a>
+        <a href="https://github.com/ReddyyZ"><i class="fab fa-github"></i></a>
         <a href=""><i class="fab fa-twitter-square"></i></a>
-        <a href=""><i class="fab fa-youtube"></i></a>
-        <a href=""><i class="fab fa-medium"></i></a>
-        <a href=""><i class="fas fa-briefcase"></i></a>
-        <a href=""><i class="far fa-envelope"></i></a>
+        <a href="https://youtube.com/fantasmanosistema"><i class="fab fa-youtube"></i></a>
+        <a href="https://medium.com/@reddyyz"><i class="fab fa-medium"></i></a>
+        <a href="/portfolio"><i class="fas fa-briefcase"></i></a>
+        <a href="mailto:arthurc.oli.whitehat@gmail.com"><i class="far fa-envelope"></i></a>
       </div>
     </header>
 
