--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@
 
     </script>
     <header>
-      <a href="" class="name">ReddyyZ</a>
+      <a href="/" class="name">ReddyyZ</a>
       <div class="lnks">
         <a href="https://github.com/ReddyyZ"><i class="fab fa-github"></i></a>
         <a href=""><i class="fab fa-twitter-square"></i></a>
