--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -20,7 +20,17 @@
   </head>
 
   <body>
-    <!-- Google Tag Manager (noscript) -->
+    <header>
+      <a href="/" class="name">ReddyyZ</a>
+      <div class="lnks">
+        <a href="https://github.com/ReddyyZ"><i class="fab fa-github"></i></a>
+        <a href=""><i class="fab fa-twitter-square"></i></a>
+        <a href="https://youtube.com/fantasmanosistema"><i class="fab fa-youtube"></i></a>
+        <a href="https://medium.com/@reddyyz"><i class="fab fa-medium"></i></a>
+        <a href="/portfolio"><i class="fas fa-briefcase"></i></a>
+        <a href="mailto:arthurc.oli.whitehat@gmail.com"><i class="far fa-envelope"></i></a>
+      </div>
+    </header>    <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQJN96Q"
       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- End Google Tag Manager (noscript) -->
