noindex on tags and categories

--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -15,7 +15,7 @@
       })(window,document,'script','dataLayer','GTM-TQJN96Q');</script>
       <!-- End Google Tag Manager -->
     <link rel="stylesheet" href="{{ '/assets/css/home.css?v=' }}">
-
+    <meta name="robots" content="noindex">
 {% seo %}
   </head>
 
