--- a/assets/css/post.scss
+++ b/assets/css/post.scss
@@ -6,7 +6,7 @@
 .container section {
     margin: 20px;
     width: 90% !important;
-    margin-top: 0;
+    margin-top: 10px;
     height: 100%;
 }
 
