--- a/assets/css/post.scss
+++ b/assets/css/post.scss
@@ -25,6 +25,10 @@
     color: #bdf358;
 }
 
+.categories-small {
+    margin-bottom: 10px;
+}
+
 @media (max-width: 600px), (min-height: 890px){
     .container {
         margin-top: 90px;
