--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/404.css?v=' | append: site.github.build_revision | relative_url }}">
-
+    <link rel="apple-touch-icon" sizes="114x114" href="touch-icon-ipad.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="touch-icon-iphone.png" />
 {% seo %}
   </head>
 
