--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -15,7 +15,9 @@
       })(window,document,'script','dataLayer','GTM-TQJN96Q');</script>
       <!-- End Google Tag Manager -->
     <link rel="stylesheet" href="{{ '/assets/css/home.css?v=' }}">
-
+    <meta name="robots" content="noindex">
+    <link rel="apple-touch-icon" sizes="114x114" href="touch-icon-ipad.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="touch-icon-iphone.png" />
 {% seo %}
   </head>
 
@@ -25,7 +27,7 @@
       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- End Google Tag Manager (noscript) -->
     <div class="fixed-bar">
-        <img src="{{ site.perfil_img }}" alt="">
+        <img src="{{ site.perfil_img }}" alt="ReddyyZ Perfil">
 
         <a class="name" href="/">{{ site.name }}</a>
         <p class="desc">{{ site.perfil_desc }}</p>
