--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-TQJN96Q');</script>
       <!-- End Google Tag Manager -->
-
+    <link rel="apple-touch-icon" sizes="114x114" href="touch-icon-ipad.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="touch-icon-iphone.png" />
 {% seo %}
   </head>
 
@@ -36,7 +37,7 @@
       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!-- End Google Tag Manager (noscript) -->
     <div class="fixed-bar">
-        <img src="{{ site.perfil_img }}" alt="">
+        <img src="{{ site.perfil_img }}" alt="ReddyyZ Perfil">
 
         <a class="name" href="/">{{ site.name }}</a>
         <p class="desc">{{ site.perfil_desc }}</p>
