--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,7 +58,12 @@
         <img src="{{ site.perfil_img }}" alt="ReddyyZ Perfil">
 
         <a class="name" href="/">{{ site.name }}</a>
-        <p class="desc">{{ site.perfil_desc }}</p>
+        <div class="desc-div">
+          <p class="desc">{{ site.perfil_desc }}</p>
+          <p class="site-desc">
+            Artigos sobre pentest & hacking
+          </p>
+        </div>
         <div class="links">
             <div class="link"><i class="fab fa-github"> &nbsp;<a href="https://github.com/ReddyyZ" target="_blank" rel="noopener noreferrer">Github</a></i></div>
             <div class="link"><i class="fab fa-twitter-square"> &nbsp;<a href="">Twitter</a></i></div>
