--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Google Tag Manager (noscript) -->
     <header>
-      <a href="" class="name">ReddyyZ</a>
+      <a href="/" class="name">ReddyyZ</a>
       <div class="lnks">
         <a href="https://github.com/ReddyyZ"><i class="fab fa-github"></i></a>
         <a href=""><i class="fab fa-twitter-square"></i></a>
@@ -41,7 +41,12 @@
         <img src="{{ site.perfil_img }}" alt="ReddyyZ Perfil">
 
         <a class="name" href="/">{{ site.name }}</a>
-        <p class="desc">{{ site.perfil_desc }}</p>
+        <div class="desc-div">
+          <p class="desc">{{ site.perfil_desc }}</p>
+          <p class="site-desc">
+            Artigos sobre pentest & hacking
+          </p>
+        </div>
         <div class="links">
             <div class="link"><i class="fab fa-github"> &nbsp;<a href="https://github.com/ReddyyZ" target="_blank" rel="noopener noreferrer">Github</a></i></div>
             <div class="link"><i class="fab fa-twitter-square"> &nbsp;<a href="">Twitter</a></i></div>
@@ -49,7 +54,7 @@
             <div class="link"><i class="fab fa-medium"> &nbsp;<a href="https://medium.com/@reddyyz" target="_blank" rel="noopener noreferrer">Medium</a></i></div>
             <div class="link"><i class="fas fa-briefcase"> &nbsp;<a href="/portfolio">Portfolio</a></i></div>
             <div class="link"><i class="far fa-envelope"> <a href="mailto:arthurc.oli.whitehat@gmail.com" target="_blank" rel="noopener noreferrer">Email</a></i></div>
-            <div class="link"><i class="fas fa-map-marker-alt"> &nbsp;<a>Brazil</a></i></div>
+            <div class="link"><i class="fas fa-map-marker-alt"> &nbsp;<a href="">Brazil</a></i></div>
         </div>
     </div>
 
