--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,25 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-TQJN96Q');</script>
       <!-- End Google Tag Manager -->
-    <link rel="apple-touch-icon" sizes="114x114" href="touch-icon-ipad.png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="touch-icon-iphone.png" />
+
+      <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="/icons/apple-icon-72x72.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="/icons/apple-icon-76x76.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="/icons/apple-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-icon-120x120.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="/icons/apple-icon-144x144.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-icon-180x180.png">
+      <link rel="icon" type="image/png" sizes="192x192"  href="/icons/android-icon-192x192.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="/icons/favicon-96x96.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+      <link rel="manifest" href="/manifest.json">
+      <meta name="msapplication-TileColor" content="#b5e853">
+      <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+      <meta name="theme-color" content="#b5e853">
+
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5f874cb10a629300122e0533&product=inline-share-buttons" async="async"></script>
 {% seo %}
   </head>
