--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -91,6 +91,9 @@
         {% endfor %}
         </ul>
       </section>
+      <div class="footer">
+        <div class="sharethis-inline-share-buttons"></div>
+      </div>
     </div>
 
     {% if site.google_analytics %}
