--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -111,6 +111,9 @@
         {% endif %}
         <br>
       </section>
+      <div class="footer">
+        <div class="sharethis-inline-share-buttons"></div>
+      </div>
     </div>
 
     {% if site.google_analytics %}
