--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -32,6 +32,9 @@
       <section id="main_content">
         {{ content }}
       </section>
+      <div class="footer">
+        <div class="sharethis-inline-share-buttons"></div>
+      </div>
     </div>
 
     {% if site.google_analytics %}
