--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -78,6 +78,9 @@
       <section id="main_content">
         {{content}}
       </section>
+      <div class="footer">
+        <div class="sharethis-inline-share-buttons"></div>
+      </div>
     </div>
 
     {% if site.google_analytics %}
