--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -24,6 +24,8 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#b5e853">
     
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5f874cb10a629300122e0533&product=inline-share-buttons" async="async"></script>
+
 {% seo %}
   </head>
 
