--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="cphsPqPwkYhfSICiunq-WX5Gs9t3nrTEuQBWkPoq5Co" />
-    <link rel="stylesheet" href="{{ '/assets/css/default.css?v=' | append: site.github.build_revision | relative_url }}">
     <script src="https://kit.fontawesome.com/55f0994afc.js" crossorigin="anonymous"></script>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
       j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-TQJN96Q');</script>
+    })(window,document,'script','dataLayer','GTM-TQJN96Q');</script>
       <!-- End Google Tag Manager -->
+      
+    <link rel="stylesheet" href="{{ '/assets/css/default.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/post.css?v=' | append: site.github.build_revision | relative_url }}">
     
     <meta property="og:type" content="article">
@@ -111,10 +112,10 @@
           <small class="categories_small">Categories: {% for category in page.categories %} <a class="tag" href="/category/{{category}}">{{ category }}</a> {% endfor %}</small>
         {% endif %}
         <br>
+        <div class="footer" style="border-top: 2px solid #ffffff; padding-top: 5px; margin-top: 5px;">
+          <div class="sharethis-inline-share-buttons"></div>
+        </div>
       </section>
-      <div class="footer">
-        <div class="sharethis-inline-share-buttons"></div>
-      </div>
     </div>
 
     {% if site.google_analytics %}
