--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,9 +47,11 @@
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5f874cb10a629300122e0533&product=inline-share-buttons" async="async"></script>
 {% seo %}
 
+    <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:image" content="{{page.image}}">
     <meta property="twitter:title" content="{{page.title}}">
     <meta property="twitter:description" content="{{page.description}}">
+    <meta property="twitter:url" content="{{page.url}}">
     <meta property="image" content="{{page.image}}">
 
   </head>
