--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,7 +51,7 @@
     <meta property="twitter:image" content="{{page.image}}">
     <meta property="twitter:title" content="{{page.title}}">
     <meta property="twitter:description" content="{{page.description}}">
-    <meta property="twitter:url" content="{{page.url}}">
+    <meta property="twitter:url" content="https://reddyyz.github.io{{page.url}}">
     <meta property="image" content="{{page.image}}">
 
   </head>
