--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
         <a href="https://github.com/ReddyyZ"><i class="fab fa-github" aria-label="Github"></i></a>
         <a href=""><i class="fab fa-twitter-square" aria-label="Twitter"></i></a>
         <a href="https://youtube.com/fantasmanosistema"><i class="fab fa-youtube" aria-label="Youtube"></i></a>
-        <a href="https://medium.com/@reddyyz"><i class="fab fa-medium" aria-label="Medium"></i></a>
+        <a href="https://reddyyz.medium.com/"><i class="fab fa-medium" aria-label="Medium"></i></a>
         <a href="/portfolio"><i class="fas fa-briefcase" aria-label="Portfolio"></i></a>
         <a href="mailto:arthurc.oli.whitehat@gmail.com"><i class="far fa-envelope" aria-label="Email"></i></a>
       </div>
@@ -68,7 +68,7 @@
             <div class="link"><i class="fab fa-github"> &nbsp;<a href="https://github.com/ReddyyZ" target="_blank" rel="noopener noreferrer">Github</a></i></div>
             <div class="link"><i class="fab fa-twitter-square"> &nbsp;<a href="">Twitter</a></i></div>
             <div class="link"><i class="fab fa-youtube"> <a href="https://youtube.com/fantasmanosistema" target="_blank" rel="noopener noreferrer">Youtube</a></i></div>
-            <div class="link"><i class="fab fa-medium"> &nbsp;<a href="https://medium.com/@reddyyz" target="_blank" rel="noopener noreferrer">Medium</a></i></div>
+            <div class="link"><i class="fab fa-medium"> &nbsp;<a href="https://reddyyz.medium.com/" target="_blank" rel="noopener noreferrer">Medium</a></i></div>
             <div class="link"><i class="fas fa-briefcase"> &nbsp;<a href="/portfolio">Portfolio</a></i></div>
             <div class="link"><i class="far fa-envelope"> <a href="mailto:arthurc.oli.whitehat@gmail.com" target="_blank" rel="noopener noreferrer">Email</a></i></div>
             <div class="link"><i class="fas fa-map-marker-alt"> &nbsp;<a href="">Brazil</a></i></div>
