--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -147,9 +147,8 @@
         var claps = await getClap();
         claps = JSON.parse(claps);
 
-        const page_claps = claps["{{page.title}}"].length;
-        console.log(page_claps);
-        y.innerHTML = (page_claps ? page_claps : "0") + ' claps';
+        let page_claps = claps["{{page.title}}"];
+        y.innerHTML = (page_claps ? page_claps.length : "0") + ' claps';
       }
       x();
     </script>
