--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -125,7 +125,7 @@
           <div class="sharethis-inline-share-buttons"></div>
         </div>
         <div class="footer-2">
-          <button title="Aplaudir" onclick="clap('{{page.title}}');window.location.reload(false);"><img src="/assets/images/clap.png" width="40px" height="50px" alt="clap"><p class="claps"></p></button>
+          <button title="Aplaudir" onclick="clap('{{page.title}}');"><img src="/assets/images/clap.png" width="40px" height="50px" alt="clap"><p class="claps"></p></button>
         </div>
       </section>
     </div>
