--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,9 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-TQJN96Q');</script>
       <!-- End Google Tag Manager -->
+
+    <script data-ad-client="ca-pub-5732764161899098" async 
+src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       
     <link rel="stylesheet" href="{{ '/assets/css/default.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/post.css?v=' | append: site.github.build_revision | relative_url }}">
